@@ -1,9 +1,9 @@
 {
-  "timestamp" : "2022-10-20T02:08:31Z",
+  "timestamp" : "2022-10-20T08:29:40Z",
   "count_outdated" : 2501,
   "uniques_outdated" : 643,
-  "count" : 2567,
-  "uniques" : 682,
+  "count" : 2568,
+  "uniques" : 683,
   "clones" : [
     {
       "timestamp": "2022-10-07T00:00:00Z",
@@ -86,6 +86,13 @@
       "timestamp": "2022-10-19T00:00:00Z",
       "count": 2,
       "count_minmax": [ 1, 2 ],
+      "uniques": 1,
+      "uniques_minmax": [ 1, 1 ]
+    },
+    {
+      "timestamp": "2022-10-20T00:00:00Z",
+      "count": 1,
+      "count_minmax": [ 1, 1 ],
       "uniques": 1,
       "uniques_minmax": [ 1, 1 ]
     }
