@@ -1,5 +1,5 @@
 {
-  "count": 66,
+  "count": 67,
   "uniques": 25,
   "clones": [
     {
@@ -60,6 +60,11 @@
     {
       "timestamp": "2022-10-19T00:00:00Z",
       "count": 2,
+      "uniques": 1
+    },
+    {
+      "timestamp": "2022-10-20T00:00:00Z",
+      "count": 1,
       "uniques": 1
     }
   ]
